src/objects/Poblacion_CP__c.object
<CustomObject>
    <description>Objeto intermedio para relacionar los Territorios de Servicio con las Poblaciones.</description>
    <fields>
        <fullName>PCP_LKP_Poblacion__c</fullName>
        <description>Población relacionada</description>
        <label>Población</label>
        <referenceTo>Poblacion__c</referenceTo>
        <relationshipName>Poblaciones_CP</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PCP_LKP_TerritorioServicio__c</fullName>
        <description>Territorio de Servicio relacionado</description>
        <label>Territorio de servicio</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipName>Poblaciones_CP</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PCP_TXT_Identificador__c</fullName>
        <description>Identificador externo y exclusivo que se informará con el código postal y el nombre del territorio (CP#Población).</description>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Población con el Código Postal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Población con el Código Postal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Poblaciones con los Códigos Postales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador  no puede ser modificado</description>
        <errorConditionFormula>IF(AND(ISCHANGED(PCP_TXT_Identificador__c ),PCP_TXT_Identificador__c &lt;&gt; PCP_LKP_TerritorioServicio__r.TDS_TXT_Identificador__c + &apos;#&apos; + PCP_LKP_Poblacion__r.Name), true, false)</errorConditionFormula>
        <errorMessage>El campo identificador  no puede ser modificado</errorMessage>
    </validationRules>
</CustomObject>